--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         <h3>Resume</h3>
         <div class="scrollable-content">
           <p>
-            You can find my most recent CV <a href="/files/resume.pdf">here</a>.
+            You can find my most recent resume <a href="/files/resume.pdf">here</a>.
           </p>
         </div>
       </div>
