--- a/index.html
+++ b/index.html
@@ -11,11 +11,106 @@
     />
     <link rel="stylesheet" href="./styles/modern-normalize.css" />
     <link rel="stylesheet" href="./styles/global.css" />
+    <link rel="stylesheet" href="./styles/components/header.css" />
+    <link rel="stylesheet" href="./styles/components/mobile-nav.css" />
     <link rel="stylesheet" href="./styles/utils.css" />
+    <link href="https://cdn.lineicons.com/4.0/lineicons.css" rel="stylesheet" />
+    <script src="./src/main.js" type="module"></script>
     <title>Tanvin Kalra</title>
   </head>
   <body>
-    <header></header>
-    <main>section</main>
+    <header class="header container">
+      <span class="header__title">Tanvin</span>
+      <button id="bars-btn" class="header__bars" aria-label="menu button">
+        <svg
+          aria-hidden="true"
+          xmlns="http://www.w3.org/2000/svg"
+          viewBox="0 0 24 24"
+          fill="currentColor"
+        >
+          <path
+            fill-rule="evenodd"
+            d="M3 6.75A.75.75 0 0 1 3.75 6h16.5a.75.75 0 0 1 0 1.5H3.75A.75.75 0 0 1 3 6.75ZM3 12a.75.75 0 0 1 .75-.75h16.5a.75.75 0 0 1 0 1.5H3.75A.75.75 0 0 1 3 12Zm0 5.25a.75.75 0 0 1 .75-.75h16.5a.75.75 0 0 1 0 1.5H3.75a.75.75 0 0 1-.75-.75Z"
+            clip-rule="evenodd"
+          />
+        </svg>
+      </button>
+      <nav class="header__menu">
+        <div class="header__social-container">
+          <a
+            title="email"
+            href="mailto:tanvinkalra01@gmail.com"
+            target="_blank"
+            rel="noreferrer noopener"
+            class="header__social"
+            aria-label="email id"
+            ><i class="lni lni-envelope"></i
+          ></a>
+          <a
+            title="linkedin"
+            href="https://www.linkedin.com/in/tanvin-k-a58b031b6/"
+            target="_blank"
+            rel="noreferrer noopener"
+            class="header__social"
+            aria-label="linkedin link"
+          >
+            <i class="lni lni-linkedin-original"></i
+          ></a>
+          <a
+            title="github"
+            href="https://github.com/tanvinkalra"
+            target="_blank"
+            rel="noreferrer noopener"
+            class="header__social"
+            aria-label="github link"
+            ><i aria-hidden="true" class="lni lni-github-original"></i
+          ></a>
+        </div>
+        <div class="header__separator"></div>
+        <a href="./public/resume.pdf" class="btn header__enter-app-btn"
+          >Resume
+        </a>
+      </nav>
+      <!-- mobile nav -->
+      <div id="mobile-nav" class="mobile-nav">
+        <button class="mobile-nav__close-btn" id="close-btn">Close</button>
+        <span class="mobile-nav__title">Tanvin</span>
+        <div class="mobile-nav__social-container">
+          <a
+            title="email"
+            href="mailto:tanvinkalra01@gmail.com"
+            target="_blank"
+            rel="noreferrer noopener"
+            class="mobile-nav__social"
+            aria-label="email id"
+            ><i class="lni lni-envelope"></i
+          ></a>
+          <a
+            title="linkedin"
+            href="https://www.linkedin.com/in/tanvin-k-a58b031b6/"
+            target="_blank"
+            rel="noreferrer noopener"
+            class="mobile-nav__social"
+            aria-label="linkedin link"
+          >
+            <i class="lni lni-linkedin-original"></i
+          ></a>
+          <a
+            title="github"
+            href="https://github.com/tanvinkalra"
+            target="_blank"
+            rel="noreferrer noopener"
+            class="mobile-nav__social"
+            aria-label="github link"
+            ><i aria-hidden="true" class="lni lni-github-original"></i
+          ></a>
+        </div>
+        <div class="mobile-nav__separator"></div>
+        <a href="./public/resume.pdf" class="btn mobile-nav__enter-app-btn"
+          >Resume
+        </a>
+      </div>
+    </header>
+    <!-- <main>section</main> -->
   </body>
 </html>
