--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="./styles/global.css" />
     <link rel="stylesheet" href="./styles/components/header.css" />
     <link rel="stylesheet" href="./styles/components/mobile-nav.css" />
+    <link rel="stylesheet" href="./styles/components/hero.css" />
     <link rel="stylesheet" href="./styles/utils.css" />
     <link href="https://cdn.lineicons.com/4.0/lineicons.css" rel="stylesheet" />
     <script src="./src/main.js" type="module"></script>
@@ -111,6 +112,29 @@
         </a>
       </div>
     </header>
-    <!-- <main>section</main> -->
+    <main>
+      <section class="hero container">
+        <img
+          class="hero__img"
+          src="./public/hero.JPG"
+          alt="Profile picture"
+          width="2095"
+          height="2095"
+        />
+        <h2 class="hero__subtitle">Hi, I'm Tanvin, a</h2>
+        <h1 class="hero__title">Computer Science <br />Student.</h1>
+        <p class="hero__description">
+          I am a returning student working towards my master's in Computer
+          Science at NC State. With two years of
+          <strong>software engineering</strong> experience, I'm all about
+          crafting elegant solutions, diving into
+          <strong>distributed datastores</strong>, and exploring the magic of
+          <strong>machine learning</strong>.
+        </p>
+        <a class="hero__btn btn" href="mailto:tanvinkalra01@gmail.com"
+          >Reach out</a
+        >
+      </section>
+    </main>
   </body>
 </html>
