--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <link rel="stylesheet" href="./styles/components/mobile-nav.css" />
     <link rel="stylesheet" href="./styles/components/hero.css" />
     <link rel="stylesheet" href="./styles/utils.css" />
+    <link rel="stylesheet" href="./styles/components/footer.css" />
     <link href="https://cdn.lineicons.com/4.0/lineicons.css" rel="stylesheet" />
     <script src="./src/main.js" type="module"></script>
     <title>Tanvin Kalra</title>
@@ -136,5 +137,8 @@
         >
       </section>
     </main>
+    <footer class="container section">
+      <p class="footer__description">~ Tanvin Kalra ~</p>
+    </footer>
   </body>
 </html>
