Add target attribute to link tags

--- a/index.html
+++ b/index.html
@@ -108,7 +108,10 @@
           ></a>
         </div>
         <div class="mobile-nav__separator"></div>
-        <a href="./public/resume.pdf" class="btn mobile-nav__enter-app-btn"
+        <a
+          href="./public/resume.pdf"
+          class="btn mobile-nav__enter-app-btn"
+          target="_blank"
           >Resume
         </a>
       </div>
@@ -132,7 +135,10 @@
           <strong>distributed datastores</strong>, and exploring the magic of
           <strong>machine learning</strong>.
         </p>
-        <a class="hero__btn btn" href="mailto:tanvinkalra01@gmail.com"
+        <a
+          class="hero__btn btn"
+          href="mailto:tanvinkalra01@gmail.com"
+          target="_blank"
           >Reach out</a
         >
       </section>
