Add title util class

--- a/index.html
+++ b/index.html
@@ -142,6 +142,9 @@
           >Reach out</a
         >
       </section>
+      <section class="skills container section">
+        <h2 class="title">Technical Skills</h2>
+      </section>
     </main>
     <footer class="container section">
       <p class="footer__description">~ Tanvin Kalra ~</p>
