Add skills section

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="./styles/components/header.css" />
     <link rel="stylesheet" href="./styles/components/mobile-nav.css" />
     <link rel="stylesheet" href="./styles/components/hero.css" />
+    <link rel="stylesheet" href="./styles/components/skills.css" />
     <link rel="stylesheet" href="./styles/utils.css" />
     <link rel="stylesheet" href="./styles/components/footer.css" />
     <link href="https://cdn.lineicons.com/4.0/lineicons.css" rel="stylesheet" />
@@ -143,7 +144,112 @@
         >
       </section>
       <section class="skills container section">
-        <h2 class="title">Technical Skills</h2>
+        <h2 class="title">Skills</h2>
+        <div class="skills__container">
+          <div class="skills__content">
+            <h2 class="skills__title">Technical Skills</h2>
+            <p class="skills__description">
+              These are some of the technical skills that I have acquired thus
+              far in my computer science career, and I'm always looking to learn
+              more.
+            </p>
+          </div>
+          <div class="skills__grid">
+            <div class="skills__box skills__box--0margin">
+              <div class="skills__box-icon-container">
+                <svg
+                  aria-hidden="true"
+                  xmlns="http://www.w3.org/2000/svg"
+                  viewBox="0 0 24 24"
+                  fill="currentColor"
+                  class="skills__box-icon"
+                >
+                  <path
+                    d="M21 6.375c0 2.692-4.03 4.875-9 4.875S3 9.067 3 6.375 7.03 1.5 12 1.5s9 2.183 9 4.875Z"
+                  />
+                  <path
+                    d="M12 12.75c2.685 0 5.19-.586 7.078-1.609a8.283 8.283 0 0 0 1.897-1.384c.016.121.025.244.025.368C21 12.817 16.97 15 12 15s-9-2.183-9-4.875c0-.124.009-.247.025-.368a8.285 8.285 0 0 0 1.897 1.384C6.809 12.164 9.315 12.75 12 12.75Z"
+                  />
+                  <path
+                    d="M12 16.5c2.685 0 5.19-.586 7.078-1.609a8.282 8.282 0 0 0 1.897-1.384c.016.121.025.244.025.368 0 2.692-4.03 4.875-9 4.875s-9-2.183-9-4.875c0-.124.009-.247.025-.368a8.284 8.284 0 0 0 1.897 1.384C6.809 15.914 9.315 16.5 12 16.5Z"
+                  />
+                  <path
+                    d="M12 20.25c2.685 0 5.19-.586 7.078-1.609a8.282 8.282 0 0 0 1.897-1.384c.016.121.025.244.025.368 0 2.692-4.03 4.875-9 4.875s-9-2.183-9-4.875c0-.124.009-.247.025-.368a8.284 8.284 0 0 0 1.897 1.384C6.809 19.664 9.315 20.25 12 20.25Z"
+                  />
+                </svg>
+              </div>
+              <h3 class="skills__box-title">Areas</h3>
+              <p class="skills__box-description">
+                Algorithms, Cloud Computing, Data Structures, Distributed
+                Systems, Machine Learning
+              </p>
+            </div>
+            <div class="skills__box">
+              <div class="skills__box-icon-container">
+                <svg
+                  aria-hidden="true"
+                  xmlns="http://www.w3.org/2000/svg"
+                  viewBox="0 0 24 24"
+                  fill="currentColor"
+                  class="skills__box-icon"
+                >
+                  <path
+                    fill-rule="evenodd"
+                    d="M2.25 6a3 3 0 0 1 3-3h13.5a3 3 0 0 1 3 3v12a3 3 0 0 1-3 3H5.25a3 3 0 0 1-3-3V6Zm3.97.97a.75.75 0 0 1 1.06 0l2.25 2.25a.75.75 0 0 1 0 1.06l-2.25 2.25a.75.75 0 0 1-1.06-1.06l1.72-1.72-1.72-1.72a.75.75 0 0 1 0-1.06Zm4.28 4.28a.75.75 0 0 0 0 1.5h3a.75.75 0 0 0 0-1.5h-3Z"
+                    clip-rule="evenodd"
+                  />
+                </svg>
+              </div>
+              <h3 class="skills__box-title">Programming Languages</h3>
+              <p class="skills__box-description">
+                C, C++, Java, Python, SQL, Javascript, HTML, CSS
+              </p>
+            </div>
+            <div class="skills__box">
+              <div class="skills__box-icon-container">
+                <svg
+                  aria-hidden="true"
+                  xmlns="http://www.w3.org/2000/svg"
+                  viewBox="0 0 24 24"
+                  fill="currentColor"
+                  class="skills__box-icon"
+                >
+                  <path
+                    d="M11.25 4.533A9.707 9.707 0 0 0 6 3a9.735 9.735 0 0 0-3.25.555.75.75 0 0 0-.5.707v14.25a.75.75 0 0 0 1 .707A8.237 8.237 0 0 1 6 18.75c1.995 0 3.823.707 5.25 1.886V4.533ZM12.75 20.636A8.214 8.214 0 0 1 18 18.75c.966 0 1.89.166 2.75.47a.75.75 0 0 0 1-.708V4.262a.75.75 0 0 0-.5-.707A9.735 9.735 0 0 0 18 3a9.707 9.707 0 0 0-5.25 1.533v16.103Z"
+                  />
+                </svg>
+              </div>
+              <h3 class="skills__box-title">Frameworks</h3>
+              <p class="skills__box-description">Spring Boot, Django,Reactjs</p>
+            </div>
+            <div class="skills__box">
+              <div class="skills__box-icon-container">
+                <svg
+                  aria-hidden="true"
+                  xmlns="http://www.w3.org/2000/svg"
+                  viewBox="0 0 24 24"
+                  fill="currentColor"
+                  class="skills__box-icon"
+                >
+                  <path
+                    d="M4.08 5.227A3 3 0 0 1 6.979 3H17.02a3 3 0 0 1 2.9 2.227l2.113 7.926A5.228 5.228 0 0 0 18.75 12H5.25a5.228 5.228 0 0 0-3.284 1.153L4.08 5.227Z"
+                  />
+                  <path
+                    fill-rule="evenodd"
+                    d="M5.25 13.5a3.75 3.75 0 1 0 0 7.5h13.5a3.75 3.75 0 1 0 0-7.5H5.25Zm10.5 4.5a.75.75 0 1 0 0-1.5.75.75 0 0 0 0 1.5Zm3.75-.75a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Z"
+                    clip-rule="evenodd"
+                  />
+                </svg>
+              </div>
+              <h3 class="skills__box-title">Infrastructure</h3>
+              <p class="skills__box-description">
+                Amazon Web Services (AWS), Docker, Kubernetes, DynamoDB,
+                MongoDB, MySQL, PostgreSQL, Google Cloud Platform (GCP), Redis,
+                Sentry, Git, JIRA
+              </p>
+            </div>
+          </div>
+        </div>
       </section>
     </main>
     <footer class="container section">
