Add timeline section

--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
     <link rel="stylesheet" href="./styles/components/header.css" />
     <link rel="stylesheet" href="./styles/components/mobile-nav.css" />
     <link rel="stylesheet" href="./styles/components/hero.css" />
+    <link rel="stylesheet" href="./styles/components/timeline.css" />
     <link rel="stylesheet" href="./styles/components/skills.css" />
     <link rel="stylesheet" href="./styles/utils.css" />
     <link rel="stylesheet" href="./styles/components/footer.css" />
@@ -160,6 +161,81 @@
           target="_blank"
           >Reach out</a
         >
+      </section>
+      <section class="timeline container section">
+        <h2 class="title">Timeline</h2>
+
+        <ul class="timeline__container">
+          <li class="timeline__event">
+            <span class="timeline__event-icon"></span>
+            <div class="timeline__event-container">
+              <h5 class="timeline__event-thumbnail">August 2024 - Present</h5>
+              <h3 class="timeline__event-title">NC State</h3>
+              <h4 class="timeline__event-subtitle">
+                Master of Computer Science
+              </h4>
+              <p class="timeline__event-description">
+                I am currently in my first year of studies at NC State. <br />
+                <strong>Relevant Coursework</strong>: Design and Analysis of
+                Algorithms, Operating Systems Principles
+              </p>
+            </div>
+          </li>
+          <li class="timeline__event">
+            <span class="timeline__event-icon"></span>
+            <div class="timeline__event-container">
+              <h5 class="timeline__event-thumbnail">January 2023 - May 2024</h5>
+              <h3 class="timeline__event-title">
+                TartanHQ Solutions Private Limited
+              </h3>
+              <h4 class="timeline__event-subtitle">Backend Engineer</h4>
+              <p class="timeline__event-description">
+                At Tartan, I played a key role in enhancing user management,
+                scaling system capabilities, and improving security measures. I
+                led efforts to optimize infrastructure and reduce costs while
+                ensuring system reliability. Additionally, I improved database
+                performance and streamlined processes to enhance overall
+                efficiency.
+              </p>
+            </div>
+          </li>
+          <li class="timeline__event">
+            <span class="timeline__event-icon"></span>
+            <div class="timeline__event-container">
+              <h5 class="timeline__event-thumbnail">
+                January 2022 - January 2023
+              </h5>
+              <h3 class="timeline__event-title">OYO</h3>
+              <h4 class="timeline__event-subtitle">
+                Software Development Engineer
+              </h4>
+              <p class="timeline__event-description">
+                At OYO Vacation Homes, I collaborated with the DanCenter team to
+                streamline home-owner onboarding, reducing onboarding timelines
+                through efficient backend enhancements. In my full-time role, I
+                excelled in developing innovative solutions, including the
+                creation of a Backend for Frontend (BFF) service,
+                multi-threading optimizations, and robust application security
+                implementations.
+              </p>
+            </div>
+          </li>
+          <li class="timeline__event">
+            <span class="timeline__event-icon"></span>
+            <div class="timeline__event-container">
+              <h5 class="timeline__event-thumbnail">May 2021 - July 2021</h5>
+              <h3 class="timeline__event-title">Amazon</h3>
+              <h4 class="timeline__event-subtitle">
+                Software Development Engineer Intern
+              </h4>
+              <p class="timeline__event-description">
+                At Amazon, I contributed to software development for Kindle,
+                optimizing remote activities through efficient offloading,
+                significantly improving execution times.
+              </p>
+            </div>
+          </li>
+        </ul>
       </section>
       <section class="skills container section">
         <h2 class="title">Skills</h2>
