Change hero image

--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
       <section class="hero container">
         <img
           class="hero__img"
-          src="./public/hero.JPG"
+          src="./public/hero.jpg"
           alt="Profile picture"
           width="2095"
           height="2095"
