Change hero image

--- a/index.html
+++ b/index.html
@@ -140,10 +140,10 @@
       <section class="hero container">
         <img
           class="hero__img"
-          src="./public/hero.jpg"
+          src="./public/profile.jpg"
           alt="Profile picture"
-          width="3279"
-          height="3279"
+          width="3270"
+          height="3270"
         />
         <h2 class="hero__subtitle">Hi, I'm Tanvin, a</h2>
         <h1 class="hero__title">Computer Science <br />Student.</h1>
