Correct LinkedIn URL

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
       <div class="header__social-container">
         <a title="email" href="mailto:tanvinkalra01@gmail.com" target="_blank" rel="noreferrer noopener"
           class="header__social" aria-label="email id"><i class="lni lni-envelope"></i></a>
-        <a title="linkedin" href="www.linkedin.com/in/tanvin-kalra" target="_blank" rel="noreferrer noopener"
+        <a title="linkedin" href="https://www.linkedin.com/in/tanvin-kalra/" target="_blank" rel="noreferrer noopener"
           class="header__social" aria-label="linkedin link">
           <i class="lni lni-linkedin-original"></i></a>
         <a title="github" href="https://github.com/tanvinkalra" target="_blank" rel="noreferrer noopener"
